--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cse340-practice-palombo",
   "type": "module",
   "dependencies": {
+    "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1"
   },
