--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pg": "^8.18.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --env-file=.env server.js",
